Day 3 - Notes/Networking/policies/allow-ingress-to-springapp-from-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-springapp-ingress-from-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: myapp
  policyTypes:
   - Ingress
  ingress:
   - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      #- namespaceSelecotr:
      #- podSelecotr:
